<?xml version="1.0"?>
<package format="2">

  <name>midas_ros</name>
  <version>1.0.0</version>
  <description>The Python Example for Midas</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>
  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>vision_msgs</depend>

  <export>
  </export>

</package>
